# strongswan

./: configure.ac
src/_updown/: _updown.in
src/libcharon/config/: ike_cfg.c  ike_cfg.h
src/libcharon/plugins/ha/: ha_dispatcher.c
src/libcharon/plugins/vici/: README.md
src/libcharon/plugins/vici/python/: Makefile.am
src/libcharon/plugins/vici/ruby/: Makefile.am
src/libcharon/sa/: ike_sa.c
src/libcharon/sa/ikev2/tasks/: ike_rekey.c
src/libcharon/tests/: Makefile.am  libcharon_tests.h
src/libcharon/tests/suites/: test_ike_cfg.c  test_message.c
src/libhydra/plugins/kernel_netlink/: kernel_netlink_ipsec.c
src/libimcv/plugins/imc_hcd/: imc_hcd.c
src/libimcv/plugins/imv_attestation/: imv_attestation_agent.c
src/libimcv/plugins/imv_hcd/: imv_hcd_agent.c
src/libimcv/plugins/imv_os/: imv_os_agent.c
src/libstrongswan/: Makefile.am
src/libstrongswan/crypto/: crypto_factory.c  crypto_tester.c  diffie_hellman.c  diffie_hellman.h
src/libstrongswan/crypto/crypters/: crypter.c  crypter.h
src/libstrongswan/plugins/: plugin_feature.c
src/libstrongswan/plugins/chapoly/: chapoly_drv_ssse3.c
src/libstrongswan/plugins/curve25519/: curve25519_drv_portable.c
src/libstrongswan/plugins/test_vectors/: Makefile.am  test_vectors.h
src/libstrongswan/plugins/test_vectors/test_vectors/: curve25519.c
src/libstrongswan/utils/: utils.c
src/libtncif/: tncif_pa_subtypes.h
testing/scripts/recipes/: 013_strongswan.mk
